--- a/pages/estrellas/estrellas.html
+++ b/pages/estrellas/estrellas.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <!--Header-->
-  <script src="../../src/assets/js/estrellas.js"></script>
+  <script src="../../src/assets/js/main.js"></script>
     <header>
         <ul class="nav justify-content-center">
           <li class="nav-item">
@@ -37,16 +37,16 @@
         </div>
         <div class="card-body">
           <div class="form-floating mb-2">
-            <input type="text" class="form-control" id="floatingName" placeholder="name">
-            <label for="floatingName" class="form-label">Name...</label>
+            <h6>nombre:</h6>
+            <input type="text" value="" id="Name" placeholder="Nombre...">
           </div>
           <div class="form-floating mb-2">
-            <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com">
-            <label for="floatingEmail" class="form-label">Email address...</label>
+            <h6>correo:</h6>
+            <input type="email" value="" id="Email" placeholder="name@example...">
           </div>
           <div class="mb-2">
             <label for="exampleFormControlTextarea1" class="form-label">Comment:</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea type="text" id="Coment" value="" placeholder="Comentario..." rows="3"></textarea>
           </div>
           <a href="#" id="prmBtn" class="btn">Continuar...</a>
         </div>
@@ -73,7 +73,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title Estrella ">¡Genial, ha volado como toda una estrella fugaz!</h5>
-          <a href="../constelacion/constelacion.html" id="fnlBtn" class="btn">Constelacion</a>
+          <a href="../constelacion/constelacion.html" id="lstBtn" class="btn">Constelacion</a>
         </div>
         <div class="card-footer">
           de seguro que ya llego a su galaxia
