--- a/pages/constelacion/constelacion.html
+++ b/pages/constelacion/constelacion.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="constelacion.css" />
   </head>
   <body>
-    <script type="module" src="../../src/assets/js/constelacion.js"></script>
+    <script src="../../src/assets/js/main.js"></script>
     <header>
       <ul class="nav justify-content-center">
         <li class="nav-item">
@@ -37,7 +37,7 @@
           <h5 class="card-title Estrella">
             si deseas verlas tienes que presionar el boton
           </h5>
-          <a href="#" id="fnlBtn" class="btn">Ver Constelaciones</a>
+          <a href="#" id="conBtn" class="btn">Ver Constelaciones</a>
         </div>
         <div class="card-footer">Puede que te pierdas entre las estrellas.</div>
       </div>
