--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/assets/css/styles.css">
+    <link rel="stylesheet" href="src/assets/css/styles.css" />
     <title>Astra</title>
   </head>
   <body>
@@ -24,15 +24,22 @@
     asi que este sera mas que nada un nav🔽
      -->
     <header>
-      <ul class="nav justify-content-center">
+      <ul class="nav">
+        <img class="logo" src="src/assets/img/logo.svg" />
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Astra</a>
+          <a class="nav-link active" aria-current="page" href="index.html"
+            >Astra</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pages/estrellas/estrellas.html">Estrellas</a>
+          <a class="nav-link" href="pages/estrellas/estrellas.html"
+            >Estrellas</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pages/constelacion/constelacion.html">Constelacion</a>
+          <a class="nav-link" href="pages/constelacion/constelacion.html"
+            >Constelacion</a
+          >
         </li>
       </ul>
     </header>
@@ -43,14 +50,21 @@
       <div><div class="falling-dots"></div></div>
       <div class="container my-5">
         <div class="card">
-          <div class="card-header text-center">
-            Astra
-          </div>
+          <div class="card-header text-center">Astra</div>
           <div class="card-body">
             <h5 class="card-title text-center">Bienvenido a Astra</h5>
-            <p class="card-text text-center">Esta es una página web donde podrás crear comentarios con forma de estrellas, para que estas generen poco a poco constelaciones.</p>
-            <p class="card-text text-center">La idea principal es poder comentar algo que te gusta y poder encontrar gente de tu agrado.</p>
-            <p class="card-text text-center">Ya explicado de qué va, puedes crear la primera estrella. <br>Presiona la estrella. <br>🔽</p>
+            <p class="card-text text-center">
+              Esta es una página web donde podrás crear comentarios con forma de
+              estrellas, para que estas generen poco a poco constelaciones.
+            </p>
+            <p class="card-text text-center">
+              La idea principal es poder comentar algo que te gusta y poder
+              encontrar gente de tu agrado.
+            </p>
+            <p class="card-text text-center">
+              Ya explicado de qué va, puedes crear la primera estrella.
+              <br />Presiona la estrella. <br />🔽
+            </p>
             <div class="text-center">
               <a href="pages/estrellas/estrellas.html" class="btn">⭐</a>
             </div>
@@ -64,11 +78,11 @@
     <footer>
       <div class="container d-flex justify-content-center align-items-center">
         <div class="d-flex align-items-center">
-          <span class="ms-2">&copy; 2025 Astra, Corp. By Benjamin Sequeida.</span>
+          <span class="ms-2"
+            >&copy; 2025 Astra, Corp. By Benjamin Sequeida.</span
+          >
         </div>
       </div>
     </footer>
-
-
   </body>
 </html>
