--- a/pages/constelacion/constelacion.html
+++ b/pages/constelacion/constelacion.html
@@ -53,9 +53,12 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
-      <div class="grid-container">
-        <div id="result"></div>
-        <div id="resultAll"></div>
+      <div id="tituls" class="grid-containers">
+        <h5 id="tu">Tus Constelaciones:
+          <div id="result"></div></h5>
+        <h5 id="ot">Otras Constelaciones:
+          <div id="resultAll"></div></h5>
+        </div>
       </div>
     </main>
     <footer>
