--- a/pages/estrellas/estrellas.html
+++ b/pages/estrellas/estrellas.html
@@ -39,16 +39,16 @@
         </div>
         <div class="card-body">
           <div class="form-floating mb-2">
-            <label for="Name" class="form-label">Nombre...</label>
+            <h6 class="form-label">Nombre</h6>
             <input type="text" class="form-control" value="" id="Name">
           </div>
           <div class="form-floating mb-2">
-            <label for="Email" class="form-label">Email...</label>
+            <h6 class="form-label">Email</h6>
             <input type="email" class="form-control" value="" id="Email">
           </div>
           <div class="mb-2 form-floating">
+            <h6 class="form-label">Comentario</h6>
             <textarea type="text" id="Coment" value="" class="form-control" placeholder="Leave a comment here" rows="3"></textarea>
-            <label for="Coment">Comentario...</label>
           </div>
           <a href="#" id="prmBtn" class="btn btnss">Continuar...</a>
         </div>
