--- a/pages/constelacion/constelacion.html
+++ b/pages/constelacion/constelacion.html
@@ -14,8 +14,11 @@
     <link rel="stylesheet" href="constelacion.css" />
   </head>
   <body>
+    <!--Animacion 🔽 -->
+    <div><div class="falling-dots"></div></div>
     <script src="../../src/assets/js/main.js"></script>
     <header>
+      <!--NavBar 🔽 -->
       <ul class="nav">
         <img class="logo" src="../../src/assets/img/logo.svg" />
         <li class="nav-item">
@@ -32,7 +35,7 @@
       </ul>
     </header>
     <main>
-      <div><div class="falling-dots"></div></div>
+      <!--Botones a eleccion 🔽 -->
       <div class="card text-center m-2" id="card">
         <div class="card-header">Bienvenido a las ¡CONSTELACIONES!</div>
         <div class="card-body">
@@ -53,6 +56,7 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </div>
+      <!--Carga informacion desde Jquery 🔽 -->
       <div id="tituls" class="grid-containers">
         <h5 id="tu">Tus Constelaciones:
           <div id="result"></div></h5>
@@ -61,6 +65,7 @@
         </div>
       </div>
     </main>
+    <!--Footer 🔽 -->
     <footer>
       <div class="container d-flex justify-content-center align-items-center">
         <div class="d-flex align-items-center">
