--- a/pages/estrellas/estrellas.html
+++ b/pages/estrellas/estrellas.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -10,88 +10,116 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="estrellas.css">
+    <link rel="stylesheet" href="estrellas.css" />
     <title>Astra</title>
-</head>
-<body>
-  <div><div class="falling-dots"></div></div>
-  <!--Header-->
-  <script src="../../src/assets/js/main.js"></script>
+  </head>
+  <body>
+    <!--animacion 🔽 -->
+    <div><div class="falling-dots"></div></div>
+    <!--Header 🔽 -->
+    <script src="../../src/assets/js/main.js"></script>
     <header>
-        <ul class="nav">
-          <img class="logo" src="../../src/assets/img/logo.svg">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../../index.html">Astra</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="estrellas.html">Estrellas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../constelacion/constelacion.html">Constelacion</a>
-          </li>
-        </ul>
-      </header>
-      <!--pedir datos para crear una estrella-->
+      <ul class="nav">
+        <img class="logo" src="../../src/assets/img/logo.svg" />
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../../index.html"
+            >Astra</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="estrellas.html">Estrellas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../constelacion/constelacion.html"
+            >Constelacion</a
+          >
+        </li>
+      </ul>
+    </header>
+    <!--main 🔽 -->
     <main>
+      <!--Form 🔽 -->
       <div class="card text-center m-2">
-        <div class="card-header">
-          Paso 1
-        </div>
+        <div class="card-header">Paso 1</div>
         <div class="card-body">
           <div class="form-floating mb-2">
             <h6 class="form-label">Nombre</h6>
-            <input type="text" class="form-control" value="" id="Name">
+            <input type="text" class="form-control" value="" id="Name" />
           </div>
           <div class="form-floating mb-2">
             <h6 class="form-label">Email</h6>
-            <input type="email" class="form-control" value="" id="Email">
+            <input type="email" class="form-control" value="" id="Email" />
           </div>
           <div class="mb-2 form-floating">
             <h6 class="form-label">Comentario</h6>
-            <textarea type="text" id="Coment" value="" class="form-control" placeholder="Leave a comment here" rows="3"></textarea>
+            <textarea
+              type="text"
+              id="Coment"
+              value=""
+              class="form-control"
+              placeholder="Leave a comment here"
+              rows="3"
+            ></textarea>
           </div>
           <a href="#" id="prmBtn" class="btn btnss">Continuar...</a>
         </div>
         <div class="card-footer">
           Completar informacion para el paso siguiente.
         </div>
+        <!--Card tarjeta 🔽 , estos pasos paresen insesasrios en front, pero en back son oro puro -->
       </div>
       <div class="card text-center m-2" id="card-2">
-        <div class="card-header">
-          Paso 2
-        </div>
+        <div class="card-header">Paso 2</div>
         <div class="card-body">
-          <h5 class="card-title">Genial creaste una<h5 class="Estrella">!ESTRELLA¡<br>⭐</h5></h5>
+          <h5 class="card-title">
+            Genial creaste una
+            <h5 class="Estrella">!ESTRELLA¡<br />⭐</h5>
+          </h5>
           <p class="card-text">Prueba a enviarla a la constelacion.</p>
           <a href="#" id="fnlBtn" class="btn btnss">🚀 ENVIAR 🚀</a>
         </div>
-        <div class="card-footer">
-          de seguro que es radiante!
-        </div>
+        <div class="card-footer">de seguro que es radiante!</div>
       </div>
+      <!--Card tarjeta paso final 🔽 -->
       <div class="card text-center m-2" id="card-3">
-        <div class="card-header">
-          Paso Final
-        </div>
+        <div class="card-header">Paso Final</div>
         <div class="card-body">
-          <h5 class="card-title Estrella ">¡Genial, ha volado como toda una estrella fugaz!</h5>
-          <a href="../constelacion/constelacion.html" id="lstBtn" class="btn btnss">Constelacion</a>
-          <a href="../estrellas/estrellas.html" id="agnBtn" class="btn btnss">Crear otra estrella</a>
+          <!--Botones a eleccion 🔽-->
+          <h5 class="card-title Estrella">
+            ¡Genial, ha volado como toda una estrella fugaz!
+          </h5>
+          <a
+            href="../constelacion/constelacion.html"
+            id="lstBtn"
+            class="btn btnss"
+            >Constelacion</a
+          >
+          <a href="../estrellas/estrellas.html" id="agnBtn" class="btn btnss"
+            >Crear otra estrella</a
+          >
         </div>
-        <div class="card-footer">
-          de seguro que ya llego a su galaxia
-        </div>
+        <div class="card-footer">de seguro que ya llego a su galaxia</div>
       </div>
-      <div class="progress m-2" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-        <div class="progress-bar " style="width: 0%"></div>
+      <div
+        class="progress m-2"
+        role="progressbar"
+        aria-label="Basic example"
+        aria-valuenow="0"
+        aria-valuemin="0"
+        aria-valuemax="100"
+      >
+        <div class="progress-bar" style="width: 0%"></div>
       </div>
     </main>
+    <!-- Footer 🔽 -->
     <footer>
       <div class="container d-flex justify-content-center align-items-center">
         <div class="d-flex align-items-center">
-          <span class="ms-2">&copy; 2025 Astra, Corp. By Benjamin Sequeida.</span>
+          <span class="ms-2"
+            >&copy; 2025 Astra, Corp. By Benjamin Sequeida.</span
+          >
         </div>
       </div>
     </footer>
-</body>
+  </body>
 </html>
